# contour

./: .gitignore  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  settings.ron
.github/workflows/: ci.yaml  release.yaml  rust-check.yml
aseprite/: debug.aseprite  entities_tileset.ase  ground_details.aseprite  lightmask.aseprite  residential_indoor.aseprite  residential_outdoor.aseprite  tileset_debug.aseprite
assets/: dialogues.ron
assets/animations/: player.ron
assets/aseprite/: character.ase  crate.aseprite  cursor.ase  enemy.ase  entities.ase  lightmask.aseprite  residential_indoors.ase
assets/levels/: contour.ldtk  debug.ldtk  example.json  typical.ldtk
src/: animation.rs  assets.rs  camera.rs  config.rs  constants.rs  consts.rs  game.rs  level.rs  lighting.rs  main.rs  physics.rs  player.rs  rendering.rs  save.rs  state.rs  text.rs  weather.rs
src/ai/: mod.rs
src/animation/: mod.rs
src/audio/: background_music.rs  bgm.rs  mod.rs  sfx.rs
src/character/: enemy.rs  mod.rs  player.rs
src/dialogue/: mod.rs  talker.rs  ui.rs
src/interaction/: cursor.rs  mod.rs
src/ldtk/: entities.rs  int_grid_cells.rs  level.rs  mod.rs  utils.rs
src/ldtk/entities/: bundles.rs  components.rs  mod.rs
src/ldtk/level/: mod.rs  transition.rs
src/level/: mod.rs
src/pawn/: animation.rs  enemy.rs  mod.rs  player.rs
src/rendering/: camera.rs  layers.rs  lighting.rs  mod.rs
src/state/: mod.rs
src/ui/: dialogue.rs  main_menu.rs  mod.rs  options_menu.rs  releasable_action_buttons.rs  start_menu.rs  styled_buttons.rs  styling.rs  text.rs
