[package]
name = "contour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
bevy = { version = "^0.8" }
bevy_egui = "^0.16.0"
bevy-inspector-egui = "^0.12.1"
bevy_rapier2d = { version = "^0.16.0", features = [
    "simd-stable",
    "debug-render",
] }
bevy_ecs_ldtk = "^0.4.0"
bevy_ecs_tilemap = "^0.7.0"
bevy_kira_audio = { version = "^0.12.0", features = ["wav"] }
iyes_loopless = "^0.7.1"
rand = "^0.8.5"
serde = "^1.0.144"
ron = "^0.8.0"

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }

[profile.dev.package."*"]
opt-level = 3
